--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "title": "Clean Blog Jekyll",
-    "name": "startbootstrap-clean-blog-jekyll",
+    "title": "Marcelo Laprea",
+    "name": "marcelolaprea",
     "version": "4.0.9",
-    "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
+    "description": "Software Engineering blog",
     "keywords": [
         "css",
         "sass",
@@ -11,20 +11,8 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/template-overviews/clean-blog",
-    "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll/issues",
-        "email": "feedback@startbootstrap.com"
-    },
-    "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll.git"
-    },
+    "homepage": "https://lapreamarcelo.github.io",
+    "author": "Marcelo Laprea",
     "dependencies": {
         "bootstrap": "4.3.1",
         "font-awesome": "4.7.0",
