--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,17 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://blackrockdigital.github.io"
+title:              Marcelo Laprea
+email:              marcelojosel15@gmail.com
+description:        Software Engineering Blog
+author:             Marcelo Laprea
+baseurl:            "/"
+url:                "https://lapreamarcelo.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    BlackrockDigital
-facebook_username:  StartBootstrap
-linkedin_username:
+twitter_username:   marcelolaprea
+github_username:    lapreamarcelo
+linkedin_username:  marcelolaprea
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+#google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
