--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "title": "Marcelo Laprea",
     "name": "marcelolaprea",
     "version": "4.0.9",
-    "description": "Software Engineering blog",
+    "description": "iOS Software Engineer",
     "keywords": [
         "css",
         "sass",
