--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
-url: "https://sylhare.github.io"
+baseurl: "/"
+url: "https://lapreamarcelo.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: Type on Strap                                    # site's title
-description: "A website with blog posts and pages"      # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
-favicon: assets/favicon.ico                             # Icon displayed in the tab
+title: Marcelo Laprea                                                                          # site's title
+description: "Software Engineer blog, including iOS, Swift, Xcode, Machine Learning tutorials" # used by search engines
+avatar: https://lapreamarcelo.github.io/assets/img/triangle.png                                # Empty for no avatar in navbar
+favicon: https://lapreamarcelo.github.io/assets/favicon.ico                                     # Icon displayed in the tab
 
 # Header and footer text
 header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
@@ -17,7 +17,7 @@ footer_text: >
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
 post_navigation: true
-color_image: /assets/img/lineart.png                    # A bit transparent for color posts.
+color_image: https://lapreamarcelo.github.io/assets/img/lineart.png  # A bit transparent for color posts.
 
 # Features
 katex: true                                             # Enable if using math markup
