--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,5 @@
-rohanchandra: # author-id
-  name: "Rohan Chandra"
-  avatar: "https://avatars2.githubusercontent.com/u/816965?s=460&v=4"
-  url: "https://github.com/rohanchandra"
-sylhare:
-  name: Sylhare
-  avatar: "assets/img/avatars/sylhare_avatar.png"
-  url: "https://github.com/sylhare"
-mmistakes:
-  name: "Michael Rose"
-  avatar: "https://avatars3.githubusercontent.com/u/1376749?s=460&v=4"
-  url: "https://github.com/mmistakes"
-mhagnumdw:
-  name: Mhagnumdw
-  avatar: "assets/img/avatars/mhagnumdw_avatar.jpg"
-  url:
-unknown:
-  name: Unknown
-  avatar:
-  url:
+marcelolaprea: # author-id
+  name: "Marcelo Laprea"
+  avatar: "https://www.linkedin.com/dms/C4E04AQEPIjBzxfSmhg/profile-originalphoto-shrink_450_600/0?m=AQJrMcZt84zGzQAAAW-5b6gXgbOpPlBT-zl1ijpy_uvl5T_Z6GH9wtibeg&e=1579450500&v=beta&t=MQi6WuSaXVaVsp_mAnm4w3dR4LsH3kfoM1g8dzli5ZA"
+  url: "https://www.linkedin.com/in/marcelo-laprea-10215388/"
+  
