--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,16 +1,16 @@
 # Icons on the footer
-rss: true         # Make sure you created a feed.xml with feed.xml layout
-email_address:    # Full email address, e.g. "sam@example.com"
+rss: false         # Make sure you created a feed.xml with feed.xml layout
+email_address: marcelojosel15@gmail.com   # Full email address, e.g. "sam@example.com"
 behance:
 bitbucket:
 dribbble:
 facebook:
 flickr:
 gitlab:
-github: "sylhare"
+github: "lapreamarcelo"
 instagram:
 keybase:
-linkedin:         # Full URL
+linkedin: "https://www.linkedin.com/in/marcelo-laprea-10215388/"        # Full URL
 pinterest:
 reddit:
 soundcloud:
@@ -18,7 +18,7 @@ stack_overflow:
 stack_exchange:   # Full URL
 steam:
 tumblr:
-twitter:          # "twitter username"
+twitter: "marcelolaprea"         # "twitter username"
 vimeo:
 wordpress:
 youtube:          # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
