--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ favicon: https://lapreamarcelo.github.io/assets/favicon.ico                     
 # Header and footer text
 header_text: Marcelo Laprea  # Change Blog header text
 header_feature_image: assets/img/pexels/computer.jpeg
-footer_text: Created by <a href="https://avilatek.co/">Avila Tek</a>
-
+footer_text: Created by <a href="https://avilatek.co/" target="_blank">Avila Tek</a>
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
