--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 marcelolaprea: # author-id
   name: "Marcelo Laprea"
-  avatar: "https://www.linkedin.com/dms/C4E04AQEPIjBzxfSmhg/profile-originalphoto-shrink_450_600/0?m=AQJrMcZt84zGzQAAAW-5b6gXgbOpPlBT-zl1ijpy_uvl5T_Z6GH9wtibeg&e=1579450500&v=beta&t=MQi6WuSaXVaVsp_mAnm4w3dR4LsH3kfoM1g8dzli5ZA"
+  avatar: "assets/img/avatars/marcelo.jpeg"
   url: "https://www.linkedin.com/in/marcelo-laprea-10215388/"
   
