--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ favicon: https://lapreamarcelo.github.io/assets/favicon.ico                     
 
 # Header and footer text
 header_text: Marcelo Laprea  # Change Blog header text
-header_feature_image: assets/img/pexels/computer.jpeg
+header_feature_image: assets/img/gray.jpg
 footer_text: Created by <a href="https://avilatek.co/" target="_blank">Avila Tek</a>
 
 # Blog
