--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ color_image: https://lapreamarcelo.github.io/assets/img/lineart.png  # A bit tra
 
 # Features
 katex: true                                             # Enable if using math markup
-google_analytics:                                       # Tracking ID, e.g. "UA-000000-01"
+google_analytics: "UA-156419394-1"                      # Tracking ID, e.g. "UA-000000-01"
 disqus_shortname:                                       # Your discus shortname for comments
 layout_variables:                                       # Open the "_sass > base" folder, and open "_variables.scss"
 footer_icons:                                           # In _data/social.yml
