--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 marcelolaprea: # author-id
   name: "Marcelo Laprea"
-  avatar: "assets/img/avatars/marcelo.jpeg"
+  #avatar: "assets/img/avatars/marcelo.jpeg"
   url: "https://www.linkedin.com/in/marcelo-laprea-10215388/"
   
