--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://lapreamarcelo.github.io"
 title: Marcelo Laprea                                                                          # site's title
 description: "Software Engineer blog, including iOS, Swift, Xcode, Machine Learning tutorials" # used by search engines
 avatar: #https://lapreamarcelo.github.io/assets/img/triangle.png                                # Empty for no avatar in navbar
-favicon: https://lapreamarcelo.github.io/assets/favicon.ico                                     # Icon displayed in the tab
+favicon: https://lapreamarcelo.github.io/assets/favicon2.ico                                     # Icon displayed in the tab
 
 # Header and footer text
 header_text: Marcelo Laprea  # Change Blog header text
@@ -29,7 +29,7 @@ authors:                                                # In _data/authors.yml
 language:                                               # In _data/language.yml
 
 # PAGINATION
-paginate: 5
+paginate: 6
 paginate_path: "blog/page:num"
 
 # PORTFOLIO
