Insert header in post

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ favicon: https://lapreamarcelo.github.io/assets/favicon2.ico                    
 # Header and footer text
 header_text: Marcelo Laprea  # Change Blog header text
 header_feature_image: assets/img/gray.jpg
-footer_text: Created by <a href="https://avilatek.co/" target="_blank">Avila Tek</a>
+footer_text: Created by <a href="https://avilatek.dev/" target="_blank">Avila Tek</a>
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
